--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2><span>Movie List</span></h2>
+  <h2 class="gnavi"><a href="#"><span class="text_base">Movie List</span><span class="text_base">ムービーリスト</span></a></h2>
   <div class="row">
     <div class="col-md-3">
       <table class="table table-borderless category-table">
