--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,15 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-  		<%= render 'info', user: current_user %>
-  	</div>
-  	<div class="col-md-8 offset-md-1">
-  	  <h2><span>Account</span></h2>
-  	  <div class="row justify-content-center">
-  	    <div class="col-md-8">
-  	      <%= render 'index', users: @users %>
-  	    </div>
-  	  </div>
-  	</div>
+      <%= render 'info', user: current_user %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2 class="gnavi"><a href="#"><span class="text_base">Account</span><span class="text_base">アカウント</span></a></h2>
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <%= render 'index', users: @users %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
