[add]aboutページ, snsにリンク

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -67,8 +67,8 @@
         <div class="mt-5 mb-3"><i class="fab fa-instagram about_icon"></i></div>
       </div>
       <h5 class="text_base text-center">Instagram</h5>
-      <p class="text_base text-center mt-5 mb-5">
-        @kan_takayama
+      <p class="text-center mt-5 mb-5">
+        <%= link_to '@kan_takayama', 'https://www.instagram.com/kan_takayama/',class:"text-decoration-none text_base" %>
       </p>
     </div>
   </div>
@@ -78,18 +78,18 @@
         <div class="mt-5 mb-3"><i class="fab fa-twitter about_icon"></i></div>
       </div>
       <h5 class="text_base text-center">Twitter</h5>
-      <p class="text_base text-center mt-5 mb-5">
-        @kant9612<br>
-        タカヤマカン
+      <p class="text-center mt-5 mb-5">
+        <%= link_to '@kant9612', 'https://twitter.com/kant9612',class:"text-decoration-none text_base" %>
       </p>
     </div>
+
     <div class="about_icon_box col-md-3 mb-5">
       <div class="row justify-content-center">
         <div class="mt-5 mb-3"><i class="fab fa-github about_icon"></i></div>
       </div>
       <h5 class="text_base text-center">Github</h5>
-      <p class="text_base text-center mt-5 mb-5">
-        kant9612
+      <p class="text-center mt-5 mb-5">
+        <%= link_to 'kant9612', 'https://github.com/kant9612',class:"text-decoration-none text_base" %>
       </p>
     </div>
   </div>
