--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -13,7 +13,7 @@
 			<% @lists.each do |list| %>
 				<div class="top_rank mypage_list">
 					<div class="media mt-3">
-      		  <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+      		  <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image_yoko.jpg" %></div>
       		  <div class="media-body">
       		    <h5 class="mt-3"><%= link_to list.list_title, list_path(list.id), class:"text-decoration-none text_base" %></h5>
       		    <div>by <%= list.user.name %></div>
