--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -23,7 +23,7 @@
       <% @lists.reverse.each do |list| %>
         <div class="mypage_list">
           <div class="media mt-3">
-            <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+            <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image_yoko.jpg" %></div>
             <div class="media-body">
               <h5 class="mt-3"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
               <div>by <%= list.user.name %></div>
