--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,7 +5,7 @@
 	  </div>
 		<div class="col-md-8 offset-md-1">
 				<div id="list_<%= @list.id %>", class="media mt-5 text_base">
-				  <div class="d-flex mr-3"><%= attachment_image_tag @list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+				  <div class="d-flex mr-3"><%= attachment_image_tag @list, :image, size: "150x100", fallback: "no_image_yoko.jpg" %></div>
 				  <div class="media-body">
             <h5 class="mt-0"><%= link_to @list.list_title, list_path(@list.id), class:"text_base" %></h5>
             <div>by <%= @list.user.name %></div>
