--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -52,7 +52,7 @@
       <% @datas.each do |data| %>
         <div class="mypage_list">
           <div class="media mt-3">
-            <div class="d-flex m-3"><%= attachment_image_tag data, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+            <div class="d-flex m-3"><%= attachment_image_tag data, :image, size: "150x100", fallback: "no_image_yoko.jpg" %></div>
             <div class="media-body">
               <h5 class="mt-3"><%= link_to data.list_title, list_path(data.id), class:"text_base" %></h5>
               <div>by <%= data.user.name %></div>
