--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,7 +47,7 @@
 		  <h4>作成したリスト</h4>
 	      <% @lists.each do |list| %>
 	      <div class="media mt-3 mypage_list">
-          <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+          <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image_yoko.jpg" %></div>
           <div class="media-body">
             <h5 class="mt-3"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
             <% list.categories.each do |category| %>
@@ -77,7 +77,7 @@
           <h4 class="">お気に入り</h4>
             <% @favorite_list.each do |list| %>
               <div class="media mt-3 mypage_list">
-                <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+                <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image_yoko.jpg" %></div>
                 <div class="media-body">
                   <h5 class="mt-3"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
                   <% list.categories.each do |category| %>
@@ -101,7 +101,7 @@
           <h4 class="">いいね</h4>
             <% @like_list.each do |list| %>
               <div class="media mt-3 mypage_list">
-                <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+                <div class="d-flex m-3"><%= attachment_image_tag list, :image, size: "150x100", fallback: "no_image_yoko.jpg" %></div>
                 <div class="media-body">
                   <h5 class="mt-3"><%= link_to list.list_title, list_path(list.id), class:"text_base" %></h5>
                   <% list.categories.each do |category| %>
