[add]ログインとサインイン時のplaceholderを設定

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,12 +9,12 @@
 
       <div class="field">
         <%= f.label :名前 %><br />
-        <%= f.text_field :name, autofocus: true, class:"form-control" %>
+        <%= f.text_field :name, autofocus: true, class:"form-control", placeholder:"鈴木太郎" %>
       </div>
 
       <div class="field mt-3">
         <%= f.label :メールアドレス %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control", placeholder:"abc@amail.com" %>
       </div>
 
       <div class="field mt-3">
